[package]
name = "batchcensor"
version = "0.5.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"

description = """
A tool for batch-censoring audio files.
"""

documentation = "https://docs.rs/batchcensor"
homepage = "https://github.com/udoprog/batchcensor"
repository = "https://github.com/udoprog/batchcensor"

readme = "README.md"

[dependencies]
hound = "3.4.0"
serde = {version = "1.0.88", features = ["derive"]}
serde_yaml = "0.8.8"
clap = "2.32"
relative-path = {version = "0.4", features = ["serde"]}
failure = "0.1.5"
ignore = "0.4.6"
rayon = "1.0.3"
indicatif = "0.11.0"
linked-hash-map = {version = "0.5.1", features = ["serde_impl"]}